# name_parsing

./: .gitignore  DOCUMENTATION.md  README.md  environment.yaml  pyproject.toml
data/raw/: test.json  train.json
notebooks/: examples.ipynb  play.ipynb
src/name_parsing/: __init__.py  config.py  model.py  postprocessor.py
tests/: test_inference.py  test_postprocessor.py
training/: evaluate.py  export_onnx.py  generate_training_data.py  train.py
